# Sakuga

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
sakuga/: __main__.py
sakuga/core/: bot.py
sakuga/core/plugins/: meta.py  moderation.py  owner.py
sakuga/utils/: chron.py  const.py
